--- a/index.html
+++ b/index.html
@@ -275,8 +275,9 @@ Maximize your investment in accurate, high-quality data with my comprehensive ge
 Trained in both BSL2 and BSL3 laboratories, I work with fully validated assays targeting highly pathogenic viruses like avian influenza. My skills extend across preclinical models, virological, molecular, cell culture, and immunological assays, ensuring accuracy and reliability at every stage. Let’s elevate your research to global standards.</p>
   
 </div>
-</div></label></div></section>
-          </div><div class="nonradiosection">
+</div>
+
+          </label></div><div class="nonradiosection">
     <label for="control_02">
     <h2>Computational Biology and Artifitial Intelligence</h2>
     <div class="boxicon-right"><a href="https://www.woah.org/en/what-we-do/global-initiatives/one-health/"><img src="images/met.png"></a></div>
@@ -285,7 +286,7 @@ Trained in both BSL2 and BSL3 laboratories, I work with fully validated assays t
 </h8><br><h8>4- Protein Structure – Modeling conformational states and functional implications.</h8><br><br><h8>My projects and publications demonstrate a strong track record in utilizing these techniques to address complex challenges in disease research, from infectious diseases to cancer diagnostics. Through innovative bioinformatics and AI-driven approaches, I transform raw data into valuable insights, aiding advancements in diagnostics, therapeutics, and precision medicine.</h8>
   
 </p></label></div>
-</div>
+</section></div>
 
           
           
@@ -757,7 +758,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   }
 });
 </script>
- <!-- /content -->
+</div> <!-- /content -->
 
 
 
