--- a/instrument.html
+++ b/instrument.html
@@ -177,7 +177,7 @@ ul.task-list li input[type="checkbox"] {
   <input type="radio" id="control_03" name="select" value="3">
   <label for="control_03">
     <img lazyload="" alt="ISO 17025" src="images/ics-2.png">
-    <a href="https://www.iso.org/standard/66912.html" title="ISO 17025"><h6>ISO/IEC 17025:2017<br>Lead Assessor</h6></a>
+    <a href="https://www.iso.org/standard/66912.html" title="ISO 17025"><h6>ISO/IEC 17025:2017<br>Internal Auditor</h6></a>
   </label>
 </div></section></div></div><div class="rich-text"><p>Accurate and reliable laboratory results are crucial for R&amp;D, diagnosis, surveillance, and trade. These results are guaranteed through the implementation of robust management systems that ensure consistent testing and calibration methods. With specialized training in laboratory management systems, quality control, and technical operations under ISO/IEC 17025 standards, I ensure that all lab processes achieve the highest levels of accuracy, reliability, and consistency. Laboratory quality management encompasses not only the technical aspects but also the managerial and operational components necessary for precise testing, interpretation, and reporting.</p></div><div class="inst-container">
 <h5>Biological Risk Assessment</h5>
