--- a/index.html
+++ b/index.html
@@ -279,6 +279,24 @@ Trained in both BSL2 and BSL3 laboratories, I work with fully validated assays t
 
           </label></div><div class="nonradiosection">
     <label for="control_02">
+    <h2>Animal Clinical Laboratory & Immunoassay Services</h2>
+    <div class="boxicon-right"><a href="https://www.woah.org/fileadmin/Home/fr/Health_standards/tahm/1.01.06_VALIDATION.pdf"><img src="images/ELISA.png"></a></div>
+    <p>With over 12 years of laboratory experience across various key sectors—including ELISA and immunoassay tests, diagnostic PCR, and the interpretation of test result reports at both the national reference laboratory level and in commercial genetically superior grandparent bird farm industries—I bring a wealth of expertise to support your laboratory's progression and ensure the highest standards of quality.
+
+I have overseen more than 300,000 immunoassays annually under my supervision, ensuring precision and reliability in diagnostics. You can rely on my expertise to help establish a comprehensive history of herd health, accurately differentiate between infections and vaccinations, and ensure your operations meet global standards for disease management and control. My expertise covers key areas such as:     
+    <br><h8>1- ELISA tests</h8><br><h8>2-  Virus neutralization and serum neutraliztion tests </h8><br><h8>3- Haemagglutination tests</h8><br><h8>4- Agar gel immunodiffusion (AGID) test</h8><br><h8>5- Assay Development &amp; Validation</h8><br><h8>6- Commercializtion</h8><br></p>
+    <!--item1--><div class="radio-section-row"><div class="radio-section-row-desc"><div clas=""></div><a href="https://www.thermofisher.com/us/en/home/life-science/dna-rna-purification-analysis.html"><h2> Herd health and infection and vaccination history</h2></a><div class="boxicon"><div class="hexagon">
+        <img src="images/specimen.png">
+        <div class="face1"></div>
+        <div class="face2"></div>
+      </div></div><p>Whether it's developing diagnostics for emerging diseases, improving herd health management, or ensuring compliance with industry regulations, I am fully equipped to guide your laboratory's efforts in advancing diagnostic precision and overall quality. Expanding on the scientific foundation of my work, I specialize in key areas such as:<h8>1- Immunoassay Development: Designing and validating robust ELISA and other immunoassays for large-scale diagnostic and research applications.</h8><h8>2- Health Monitoring: Establishing a detailed health history and developing protocols for distinguishing between vaccine-induced immunity and active infections, crucial for effective disease management and control.</h8></p>
+  
+</div>
+</div>
+
+          </label></div>
+      <div class="nonradiosection">
+    <label for="control_02">
     <h2>Computational Biology and Artifitial Intelligence</h2>
     <div class="boxicon-right"><a href="https://www.woah.org/en/what-we-do/global-initiatives/one-health/"><img src="images/met.png"></a></div>
     <p>To convert data into actionable insights, I continuously hone my skills in state-of-the-art analytical and bioinformatics methods. By integrating molecular lab techniques with advanced bioinformatics and programming expertise, I am able to conduct cutting-edge research that improves both human and animal health through a One Health approach.<br><br>Key areas of my research in this division include:
