--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ Trained in both BSL2 and BSL3 laboratories, I work with fully validated assays t
 
           </label></div><div class="nonradiosection">
     <label for="control_02">
-    <h2>Animal Clinical Laboratory & Immunoassay Services</h2>
+    <a href="https://www.woah.org/fileadmin/Home/fr/Health_standards/tahm/1.01.06_VALIDATION.pdf"><h2>Animal Clinical Laboratory & Immunoassay Services</h2></a>
     <div class="boxicon-right"><a href="https://www.woah.org/fileadmin/Home/fr/Health_standards/tahm/1.01.06_VALIDATION.pdf"><img src="images/ELISA.png"></a></div>
     <p>With over 12 years of laboratory experience across various key sectors—including ELISA and immunoassay tests, diagnostic PCR, and the interpretation of test result reports at both the national reference laboratory level and in commercial genetically superior grandparent bird farm industries—I bring a wealth of expertise to support your laboratory's progression and ensure the highest standards of quality.
 
