--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ I have overseen more than 300,000 immunoassays annually under my supervision, en
       <div class="nonradiosection">
     <label for="control_02">
     <h2>Computational Biology and Artifitial Intelligence</h2>
-    <div class="boxicon-right"><a href="https://www.woah.org/en/what-we-do/global-initiatives/one-health/"><img src="images/met.png"></a></div>
+    <div class="boxicon-right"><a href="https://cset.georgetown.edu/article/assessing-the-next-frontier-in-medical-research-artificial-intelligence-and-computational-biology/"><img src="images/met.png"></a></div>
     <p>To convert data into actionable insights, I continuously hone my skills in state-of-the-art analytical and bioinformatics methods. By integrating molecular lab techniques with advanced bioinformatics and programming expertise, I am able to conduct cutting-edge research that improves both human and animal health through a One Health approach.<br><br>Key areas of my research in this division include:
     <br><br><h8>1- Genomics and transcriptomics – Understanding gene expression, mutation impacts, and disease pathways.</h8><br><h8>2- Methylation data – Exploring epigenetic changes and their influence on health.</h8><br><h8>3- Proteomics – Investigating protein interactions and their role in diseases.
 </h8><br><h8>4- Protein Structure – Modeling conformational states and functional implications.</h8><br><br><h8>My projects and publications demonstrate a strong track record in utilizing these techniques to address complex challenges in disease research, from infectious diseases to cancer diagnostics. Through innovative bioinformatics and AI-driven approaches, I transform raw data into valuable insights, aiding advancements in diagnostics, therapeutics, and precision medicine.</h8>
