--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ Trained in both BSL2 and BSL3 laboratories, I work with fully validated assays t
 
 I have overseen more than 300,000 immunoassays annually under my supervision, ensuring precision and reliability in diagnostics. You can rely on my expertise to help establish a comprehensive history of herd health, accurately differentiate between infections and vaccinations, and ensure your operations meet global standards for disease management and control. My expertise covers key areas such as:     
     <br><h8>1- ELISA tests</h8><br><h8>2-  Virus neutralization and serum neutraliztion tests </h8><br><h8>3- Haemagglutination tests</h8><br><h8>4- Agar gel immunodiffusion (AGID) test</h8><br><h8>5- Assay Development &amp; Validation</h8><br><h8>6- Commercializtion</h8><br></p>
-    <!--item1--><div class="radio-section-row"><div class="radio-section-row-desc"><div clas=""></div><a href="https://www.thermofisher.com/us/en/home/life-science/dna-rna-purification-analysis.html"><h2> Herd health and infection and vaccination history</h2></a><div class="boxicon"><div class="hexagon">
+    <!--item1--><div class="radio-section-row"><div class="radio-section-row-desc"><div clas=""></div><a href="https://www.cdc.gov/vaccines/basics/explaining-how-vaccines-work.html"><h2> Herd health and infection and vaccination history</h2></a><div class="boxicon"><div class="hexagon">
         <img src="images/specimen.png">
         <div class="face1"></div>
         <div class="face2"></div>
