--- a/publication.html
+++ b/publication.html
@@ -183,28 +183,29 @@ ul.task-list li input[type="checkbox"] {
     </script>
     <div class="mb-8">
       <!--item1-2025>
-            <div class="paper tool highlight llm">
+            <div class="paper tool highlight ML_Cognitive">
         <h5>For More Publications, Visit My Google Scholar Profile</h5>
         <ol>
           <!-- <div class="myDIV"> -->
           <div class="row">
             <div class="col-5">
-              <img src="images/rdc.jpg" class="card-img" id="pub_image">
+              <img src="images/2025_Methylation_2.png" class="card-img" id="pub_image">
             </div>
             <div class="col-7">
               <span class="text-black">
                 <span class="text-primary">
-                  <strong>[Current Opinion in Structural Biology 2023]</strong><br>
-                </span> Computational modeling multiple conformational states of proteins with residual dipolar coupling data</span> 
+                  <strong>[Computer Science Sympossium 2025]</strong><br>
+                </span> GENOME-WIDE METHYLATION AND COGNITIVE FUNCTION:A RANDOM FOREST APPROACH TO PREDICTING Cognitive Impairment</span> 
                                                     <br>
                                                     <span class="text-500">
-                                                        Hamed Abdollahi*, James H. Prestegard, Homayoun Valafar <br>
+                                                        Hamed Abdollahi, Nicholas Riccardi, Ana Pocivavsek, Carolyn Banister, Leonardo Bonilha, Julius Fridriksson, Homayoun Valafar* (Homayoun@cse.sc.edu) <br>
                                                     </span>
-                                                    [<a href="javascript:expand_abstract('RDC2023');"><span class="text-primary">Abstract</span></a>]
-                                                    [<a href="https://www.sciencedirect.com/science/article/pii/S0959440X2300129X?via%3Dihub" target="_blank"><span class="text-primary">Paper</span></a>]<br>
+                                                    [<a href="javascript:expand_abstract('CSS2025');"><span class="text-primary">Abstract</span></a>]
+                                                    [<a href="https://www.linkedin.com/posts/hamed-abdollahi-15117079_machinelearning-genomics-dna-activity-7318008276569186305-G551?utm_source=share&utm_medium=member_ios&rcm=ACoAABCTU80BVZh5ReNQFYeDk3x_BFb5JInt5KY" target="_blank"><span class="text-primary">Poster</span></a>]<br>
                                                 </div>
-                                                <div id="RDC2023" class="myhide">
-                                                    <span class="text-500">Solution nuclear magnetic resonance spectroscopy provides unique opportunities to study the structure and dynamics of biomolecules in aqueous environments. While spin relaxation methods are well recognized for their ability to probe timescales of motion, residual dipolar couplings (RDCs) provide access to amplitudes and directions of motion, characteristics that are important to the function of these molecules. Although observed in the 1960s, the acquisition and computational analysis of RDCs has gained significant momentum in recent years, and particularly applications to motion in proteins have become more numerous. This trend may well continue as RDCs can easily leverage structures produced by new computational methods (e.g., AlphaFold) to produce functional descriptions. In this report, we provide examples and a summary of the ways that RDCs have been used to confirm the existence of internal dynamics, characterize the type of dynamics, and recover atomic-scale structural ensembles that define the full range of conformational sampling.<br></span>
+                                                <div id="CSS2025" class="myhide">
+                                                    <span class="text-500">In this study, we employed a genome-wide analysis of DNA methylation profiles in conjunction with a Random Forest machine learning model to identify key methylation signatures predictive cognitive disease. Our findings reveal specific CpG loci significantly associated with cognitive performance, suggesting potential epigenetic biomarkers involved in the molecular underpinnings of cognitive aging and dementia. This integrative approach underscores the promise of machine learning in uncovering biologically relevant patterns within high-dimensional epigenetic data and offers a novel framework for early detection of cognitive decline.
+<br></span>
                                                 </div>
                                             </div>
                                         <!-- </div>  -->
