--- a/publication.html
+++ b/publication.html
@@ -182,7 +182,10 @@ ul.task-list li input[type="checkbox"] {
     }
     </script>
     <div class="mb-8">
-      <!--item1-2025>
+      <!--item1-->
+      <div class="paper tool highlight llm">
+        <h5>For More Publications, Visit My Google Scholar Profile</h5>
+        <!--item1-2025>
             <div class="paper tool highlight ML_Cognitive">
         <h5>For More Publications, Visit My Google Scholar Profile</h5>
         <ol>
@@ -217,9 +220,7 @@ ul.task-list li input[type="checkbox"] {
 
                                 </div>
                                 <div class="separator"></div>
-      <!--item1-->
-      <div class="paper tool highlight llm">
-        <h5>For More Publications, Visit My Google Scholar Profile</h5>
+        <!--itemRDC-->
         <ol>
           <!-- <div class="myDIV"> -->
           <div class="row">
