--- a/publication.html
+++ b/publication.html
@@ -186,7 +186,7 @@ ul.task-list li input[type="checkbox"] {
       <div class="paper tool highlight llm">
         <h5>For More Publications, Visit My Google Scholar Profile</h5>
         <!--item1-2025>
-            <div class="paper tool highlight ML_Cognitive">
+            <div class="paper tool highlight llm">
         <h5>For More Publications, Visit My Google Scholar Profile</h5>
         <ol>
           <!-- <div class="myDIV"> -->
@@ -221,6 +221,7 @@ ul.task-list li input[type="checkbox"] {
                                 </div>
                                 <div class="separator"></div>
         <!--itemRDC-->
+       <div class="paper tool highlight llm">
         <ol>
           <!-- <div class="myDIV"> -->
           <div class="row">
