--- a/publication.html
+++ b/publication.html
@@ -220,6 +220,39 @@ ul.task-list li input[type="checkbox"] {
 
                                 </div>
                                 <div class="separator"></div>
+      <!--itemTNBC-->
+       <div class="paper tool highlight llm">
+        <ol>
+          <!-- <div class="myDIV"> -->
+          <div class="row">
+            <div class="col-5">
+              <img src="images/TNBC.jpg" class="card-img" id="pub_image">
+            </div>
+            <div class="col-7">
+              <span class="text-black">
+                <span class="text-primary">
+                  <strong>[Computational and Structural Biotechnology Journal]</strong><br>
+                </span> Pilot study: Initial investigation suggests differences in EMT-associated gene expression in breast tumor regions</span> 
+                                                    <br>
+                                                    <span class="text-500">
+                                                        Kylie L. King, Hamed Abdollahi, Zoe Dinkel, Alannah Akins, Homayoun Valafar, Heather Dunn<br>
+                                                    </span>
+                                                    [<a href="javascript:expand_abstract('TNBC');"><span class="text-primary">Abstract</span></a>]
+                                                    [<a href="https://www.sciencedirect.com/science/article/pii/S2001037025000273" target="_blank"><span class="text-primary">Paper</span></a>]<br>
+                                                </div>
+                                                <div id="TNBC" class="myhide">
+                                                    <span class="text-500">Triple negative breast cancer (TNBC) is the most aggressive subtype and disproportionately affects African American women. The development of breast cancer is highly associated with interactions between tumor cells and the extracellular matrix (ECM), and recent research suggests that cellular components of the ECM vary between racial groups. This pilot study aimed to evaluate gene expression in TNBC samples from patients who identified as African American and Caucasian using traditional statistical methods and emerging Machine Learning (ML) approaches. ML enables the analysis of complex datasets and the extraction of useful information from small datasets. We selected four regions of interest from tumor biopsy samples and used laser microdissection to extract tissue for gene expression characterization via RT-qPCR. Both parametric and non-parametric statistical analyses identified genes differentially expressed between the two ethnic groups. Out of 40 genes analyzed, 4 were differentially expressed in the edge of tumor (ET) region and 8 in the ECM adjacent to the tumor (ECMT) region. In addition to statistical approach, ML was used to generate decision trees (DT) for a broader analysis of gene expression and ethnicity. Our DT models achieved 83.33 % accuracy and identified the most significant genes, including CD29 and EGF from the ET region and SNAI1 and CHD2 from the ECMT region. All significant genes were analyzed for pathway enrichment using MSigDB and Gene Ontology databases, most notably the epithelial to mesenchymal transition and cell motility pathways. This pilot study highlights key genes of interest that are differentially expressed in African American and Caucasian TNBC samples.<br></span>
+                                                </div>
+                                            </div>
+                                        <!-- </div>  -->
+                                    
+                                        <!-- <div class="myhide">
+                                            
+                                        </div>   -->
+                                   </ol>
+
+                                </div>
+                                <div class="separator"></div>
         <!--itemRDC-->
        <div class="paper tool highlight llm">
         <ol>
