--- a/publication.html
+++ b/publication.html
@@ -198,7 +198,7 @@ ul.task-list li input[type="checkbox"] {
               <span class="text-black">
                 <span class="text-primary">
                   <strong>[Computer Science Sympossium 2025]</strong><br>
-                </span> GENOME-WIDE METHYLATION AND COGNITIVE FUNCTION:A RANDOM FOREST APPROACH TO PREDICTING GENOME-WIDE METHYLATION AND COGNITIVE FUNCTION:A RANDOM FOREST APPROACH TO PREDICTING COGNITIVE IMPAIRMENT</span> 
+                </span> GENOME-WIDE METHYLATION AND COGNITIVE FUNCTION:A RANDOM FOREST APPROACH TO PREDICTING COGNITIVE IMPAIRMENT</span> 
                                                     <br>
                                                     <span class="text-500">
                                                         Hamed Abdollahi, Nicholas Riccardi, Ana Pocivavsek, Carolyn Banister, Leonardo Bonilha, Julius Fridriksson, Homayoun Valafar* (Homayoun@cse.sc.edu) <br>
