--- a/publication.html
+++ b/publication.html
@@ -201,7 +201,7 @@ ul.task-list li input[type="checkbox"] {
                 </span> GENOME-WIDE METHYLATION AND COGNITIVE FUNCTION:A RANDOM FOREST APPROACH TO PREDICTING COGNITIVE IMPAIRMENT</span> 
                                                     <br>
                                                     <span class="text-500">
-                                                        Hamed Abdollahi, Nicholas Riccardi, Ana Pocivavsek, Carolyn Banister, Leonardo Bonilha, Julius Fridriksson, Homayoun Valafar* (Homayoun@cse.sc.edu) <br>
+                                                        Hamed Abdollahi, Carolyn Banister, Ana Pocivavsek, Nicholas Riccardi, Leonardo Bonilha, Julius Fridriksson, Homayoun Valafar* (Homayoun@cse.sc.edu) <br>
                                                     </span>
                                                     [<a href="javascript:expand_abstract('CSS2025');"><span class="text-primary">Abstract</span></a>]
                                                     [<a href="https://www.linkedin.com/posts/hamed-abdollahi-15117079_machinelearning-genomics-dna-activity-7318008276569186305-G551?utm_source=share&utm_medium=member_ios&rcm=ACoAABCTU80BVZh5ReNQFYeDk3x_BFb5JInt5KY" target="_blank"><span class="text-primary">Poster</span></a>]<br>
