--- a/publication.html
+++ b/publication.html
@@ -192,7 +192,7 @@ ul.task-list li input[type="checkbox"] {
           <!-- <div class="myDIV"> -->
           <div class="row">
             <div class="col-5">
-              <img src="images/2025_Methylation_2.png" class="card-img" id="pub_image">
+              <a href="https://www.linkedin.com/posts/hamed-abdollahi-15117079_machinelearning-genomics-dna-activity-7318008276569186305-G551?utm_source=share&utm_medium=member_ios&rcm=ACoAABCTU80BVZh5ReNQFYeDk3x_BFb5JInt5KY" target="_blank"><img src="images/2025_Methylation_2.png" class="card-img" id="pub_image"></a>
             </div>
             <div class="col-7">
               <span class="text-black">
